# pkg/model_deployment_accepted_response.go
@@ -1,20 +1,0 @@
-/*
- * Parvaeres API
- *
- * Parvaeres magic deployment API
- *
- * API version: 0.0.1
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package parvaeres
-
-type DeploymentAcceptedResponse struct {
-	Repository string `json:"repository,omitempty"`
-
-	Email string `json:"email,omitempty"`
-
-	Message string `json:"message,omitempty"`
-
-	Result string `json:"result,omitempty"`
-}
